# hover-slam

./: .gitignore  Dockerfile  Dockerfile.gui  README.md  build_docker_image.sh  run_test_plot.sh  test_bokeh.py  test_keras.py  test_plot.py  test_tf_keras.py
gan_toy/: circle_generator.py  discriminator.py  gan.py  generator.py  trainer.py  true_generator.py
gan_toy/tests/: test_circle_generator.py  test_true_generator.py
grpc-example/: clear_containers.sh  client.py  example.proto  example_pb2.py  example_pb2_grpc.py  generate_stubs.py  run_example.sh  server.py
ray_and_rllib/: Pipfile  pyproject.toml  requirements.txt
ray_and_rllib/ray_scratch/: eager_example.py  my_random_policy.py  ray_repeat.py  rockpaperscissors_scratch.py  simple_rpg.py
ray_and_rllib/ray_scratch/rock_paper_scissors/: my_rock_paper_scissors.py  policies.py  run_my_rock_paper_scissors.py  tf_model.py
ray_and_rllib/ray_scratch/whackamole/: whackamole_env.py
tensorflow-serving/: Dockerfile.client  Dockerfile.mine  build_docker_images.sh
tensorflow-serving/mnist_example/: mnist_client.py  mnist_saved_model.py  run_mnist_example.sh
